--- a/config-example.json
+++ b/config-example.json
@@ -1,9 +1,14 @@
 {
+    "persons": 6,
+    "users": 100,
+
     "database": {
         "user": "postgres",
         "host": "localhost",
         "password": "password",
         "port": 5432,
         "database": "poll"
-    }
+    },
+
+    "_comment": "Please edit this file ONLY before the first time you run it. If not, All the data would be DESTROYED!!!"
 }
