--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^8.0.8",
+    "koa-static": "^5.0.0",
     "pg": "^8.0.2"
   }
 }
